--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,18 +2,14 @@
 <h1>
   Posts
 </h1>
-<div class="container">
+
   <div class="row">
     <div class="col-xs-12">
       <ul class="list-group">
         <app-post-item *ngFor="let post of posts"
-                       [title]="post.title"
-                       [content]="post.content"
-                       [loveIts]="post.loveIts"
-                       [created_at]="post.created_at">
-
+                       [post]="post">
         </app-post-item>
       </ul>
     </div>
   </div>
-</div>
+
