--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <h1>
   Posts
 </h1>
-
+<div class="container">
   <div class="row">
     <div class="col-xs-12">
       <ul class="list-group">
@@ -12,4 +12,4 @@
       </ul>
     </div>
   </div>
-
+</div>
